DuPont DevSB/src/objects/dsfs__DocuSign_Envelope_Document__c.object
<CustomObject>
    <description>DocuSign Envelope Documents</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>dsfs__Attachment_ID__c</fullName>
        <description>Attachment ID</description>
        <inlineHelpText>Attachment ID</inlineHelpText>
        <label>Attachment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__Attachment_NameEx__c</fullName>
        <description>This longer attachment name field supercedes the Attachment_Name field which was 80 characters and could not hold the max. file name length.</description>
        <label>Attachment Name Extended</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__Attachment_Name__c</fullName>
        <description>Attachment Name (this field is too short for many file names and has been superceded by Attachment_NameEx</description>
        <inlineHelpText>Attachment Name</inlineHelpText>
        <label>Attachment Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DocuSign_EnvelopeID__c</fullName>
        <description>DocuSign Envelope ID</description>
        <inlineHelpText>DocuSign Envelope ID</inlineHelpText>
        <label>DocuSign Envelope ID</label>
        <referenceTo>dsfs__DocuSign_Envelope__c</referenceTo>
        <relationshipName>DocuSign_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dsfs__Document_ID__c</fullName>
        <description>Document ID</description>
        <inlineHelpText>Document ID</inlineHelpText>
        <label>Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__Document_Name__c</fullName>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__Document_Order__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Document Order</description>
        <inlineHelpText>Document Order</inlineHelpText>
        <label>Document Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dsfs__External_Document_Id__c</fullName>
        <label>External Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__SFDocument_Type__c</fullName>
        <description>Saleforce Document Type</description>
        <inlineHelpText>Saleforce Document Type</inlineHelpText>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attachment</fullName>
                    <default>true</default>
                    <label>Attachment</label>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>DSTemplate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dsfs__Validation_Message__c</fullName>
        <description>Validation Message</description>
        <inlineHelpText>Validation Message</inlineHelpText>
        <label>Validation Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>DocuSign Envelope Document</label>
    <listViews>
        <fullName>dsfs__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DSED-{0000000}</displayFormat>
        <label>DocuSign Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Envelope Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>